--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -45,6 +45,10 @@
                     border-radius: 100%;
                 }
 
+                img:hover {
+                    transform: scale(1.04);
+                }
+
                 @media (max-width: 700px) {
                     img {
                         height: 10rem;
@@ -65,7 +69,7 @@
                     cursor: pointer;
                 }
                 .soc-icon-image:hover {
-                    transform: scale(1.1);
+                    transform: scale(1.04);
                 }
             }
             @media (max-width: 700px) {
@@ -126,6 +130,10 @@
                             height: 6rem;
                             width: 6rem;
                         }
+                    }
+                    .tech-stack-small-box:hover {
+                        background-color: #f3f3f3;
+                        transform: scale(1.04);
                     }
                 }
             }
